--- a/newblue.yaml
+++ b/newblue.yaml
@@ -98,43 +98,43 @@ blueprint:
 
   mode: restart
 
-  trigger_variables:
-    outside_temperature: !input external_temperature
+trigger_variables:
+  outside_temperature: !input external_temperature
 
-  trigger:
-    - platform: time_pattern
-      minutes: "/5"
-    - platform: state
-      entity_id: !input scheduled_setpoint
+triggers:
+  - platform: time_pattern
+    minutes: "/5"
+  - platform: state
+    entity_id: !input scheduled_setpoint
 
-  condition:
-    - platform: state
-      entity_id: input_boolean.holiday_mode
-      state: "off"
-    - platform: not
-      conditions:
-        - platform: state
-          entity_id: binary_sensor.home_occupancy
-          state: "off"
-          for:
-            hours: 0
-            minutes: 30
-            seconds: 0
-    - platform: time
-      after: "06:30:00"
-      before: "22:30:00"
-      weekday:
-        - sun
-        - sat
-        - fri
-        - thu
-        - wed
-        - tue
-        - mon
-    - platform: template
-      value_template: "{{ states(outside_temperature) | float < 15 }}"
+conditions:
+  - platform: state
+    entity_id: input_boolean.holiday_mode
+    state: "off"
+  - platform: not
+    conditions:
+      - platform: state
+        entity_id: binary_sensor.home_occupancy
+        state: "off"
+        for:
+          hours: 0
+          minutes: 30
+          seconds: 0
+  - platform: time
+    after: "06:30:00"
+    before: "22:30:00"
+    weekday:
+      - sun
+      - sat
+      - fri
+      - thu
+      - wed
+      - tue
+      - mon
+  - platform: template
+    value_template: "{{ states(outside_temperature) | float < 15 }}"
 
-action:
+actions:
   - variables:
       external_temperature_var: !input external_temperature
       scheduled_setpoint_var: !input scheduled_setpoint
