--- a/newblue.yaml
+++ b/newblue.yaml
@@ -73,58 +73,26 @@ blueprint:
     occupancy_inputs:
       name: Occupancy Inputs
       collapsed: false
-      room_occupancy_sensor:
-        name: Room Occupancy Sensor
-        description: Select the room occupancy sensor.
-        selector:
-          entity:
-            domain: binary_sensor
-      unoccupied_offset:
-        name: Unoccupied Offset
-        description: How much should the room temperature decrease when the room is unoccupied.
-        selector:
-          number:
-            min: -5
-            max: 0
-            step: 0.5
-      unoccupied_duration:
-        name: Unoccupied Duration
-        description: How long in minutes should the room be marked as unoccupied before decreasing the temperature.
-        selector:
-          number:
-            min: 0
-            max: 59
-            step: 1
-
-  mode: restart
-
-triggers:
-  - platform: time_pattern
-    minutes: "/5"
-  - platform: state
-    entity_id: !input scheduled_setpoint
-
-conditions:
-  - platform: state
-    entity_id: input_boolean.holiday_mode
-    state: "off"
-  - platform: not
-    conditions:
-      - platform: state
-        entity_id: binary_sensor.home_occupancy
-        state: "off"
-        for:
-          hours: 0
-          minutes: 30
-          seconds: 0
-  - platform: time
-    after: "06:30:00"
-    before: "22:30:00"
-    weekday:
-      - sun
-      - sat
-      - fri
-      - thu
-      - wed
-      - tue
-      - mon
+      input:
+        room_occupancy_sensor:
+          name: Room Occupancy Sensor
+          description: Select the room occupancy sensor.
+          selector:
+            entity:
+              domain: binary_sensor
+        unoccupied_offset:
+          name: Unoccupied Offset
+          description: How much should the room temperature decrease when the room is unoccupied.
+          selector:
+            number:
+              min: -5
+              max: 0
+              step: 0.5
+        unoccupied_duration:
+          name: Unoccupied Duration
+          description: How long in minutes should the room be marked as unoccupied before decreasing the temperature.
+          selector:
+            number:
+              min: 0
+              max: 59
+              step: 1
