--- a/newblue.yaml
+++ b/newblue.yaml
@@ -134,3 +134,15 @@ conditions:
       - mon
   - platform: template
     value_template: "{{ states(outside_temperature) | float < 15 }}"
+
+actions:
+  - variables:
+      external_temperature_var: !input external_temperature
+      scheduled_setpoint_var: !input scheduled_setpoint
+      current_temperature: "{{ states(external_temperature_var) | float }}"
+      scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
+      delta_above_15: !input delta_above_15
+      delta_above_10: !input delta_above_10
+      delta_10_to_5: !input delta_10_to_5
+      delta_5_to_0: !input delta_5_to_0
+      delta_below_0: !input delta_below_0
