--- a/newblue.yaml
+++ b/newblue.yaml
@@ -146,3 +146,62 @@ actions:
       delta_10_to_5: !input delta_10_to_5
       delta_5_to_0: !input delta_5_to_0
       delta_below_0: !input delta_below_0
+  - choose:
+      - conditions:
+          - condition: template
+            value_template: "{{ current_temperature > 15 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_above_15 }}"
+              hvac_mode: "heat"
+              
+      - conditions:
+          - condition: template
+            value_template: "{{ current_temperature > 10 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
+              hvac_mode: "heat"
+
+      - conditions:
+          - condition: template
+            value_template: "{{ 5 < current_temperature <= 10 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_10_to_5 }}"
+
+      - conditions:
+          - condition: template
+            value_template: "{{ 0 < current_temperature <= 5 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_5_to_0 }}"
+
+      - conditions:
+          - condition: template
+            value_template: "{{ current_temperature <= 0 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_below_0 }}"
+
+  - delay: "00:15:30"
+  - service: climate.set_temperature
+    target:
+      entity_id: !input thermostat
+    data:
+      temperature: "{{ scheduled_setpoint }}"
