--- a/newblue.yaml
+++ b/newblue.yaml
@@ -156,3 +156,13 @@ actions:
             data:
               temperature: "{{ scheduled_setpoint + delta_above_15 }}"
               hvac_mode: "heat"
+      - conditions:
+          - condition: template
+            value_template: "{{ current_temperature > 10 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
+              hvac_mode: "heat"
