--- a/newblue.yaml
+++ b/newblue.yaml
@@ -147,8 +147,8 @@ actions:
       delta_5_to_0: !input delta_5_to_0
       delta_below_0: !input delta_below_0
   - choose:
-      - conditions:
-          - "{{ current_temperature > 15 }}"
+      - condition: template
+        value_template: "{{ current_temperature > 15 }}"
         sequence:
           - service: climate.set_temperature
             target:
