--- a/newblue.yaml
+++ b/newblue.yaml
@@ -99,8 +99,19 @@ blueprint:
 
 mode: restart
   
-#trigger_variables:
-#  outside_temperature: !input external_temperature
+trigger_variables:
+  outside_temperature: !input external_temperature
+
+variables:
+  external_temperature_var: !input external_temperature
+  scheduled_setpoint_var: !input scheduled_setpoint
+  current_temperature: "{{ states(external_temperature_var) | float }}"
+  scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
+  delta_above_15: !input delta_above_15
+  delta_above_10: !input delta_above_10
+  delta_10_to_5: !input delta_10_to_5
+  delta_5_to_0: !input delta_5_to_0
+  delta_below_0: !input delta_below_0
 
 triggers:
   - platform: time_pattern
@@ -136,16 +147,6 @@ conditions:
 #    value_template: "{{ states(outside_temperature) | float < 15 }}"
 
 actions:
-  - variables:
-      external_temperature_var: !input external_temperature
-      scheduled_setpoint_var: !input scheduled_setpoint
-      current_temperature: "{{ states(external_temperature_var) | float }}"
-      scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
-      delta_above_15: !input delta_above_15
-      delta_above_10: !input delta_above_10
-      delta_10_to_5: !input delta_10_to_5
-      delta_5_to_0: !input delta_5_to_0
-      delta_below_0: !input delta_below_0
   - choose:
       - condition: template
         value_template: "{{ current_temperature > 15 }}"
