--- a/gpt_blueprint.yaml
+++ b/gpt_blueprint.yaml
@@ -2,7 +2,7 @@ blueprint:
   name: Room Thermostat Temperature Control
   description: >
     Adjust the thermostat setpoint based on external temperature, room schedules,
-    specific conditions, and room occupancy status.
+    specific conditions, and room occupancy status with configurable occupancy detection.
   domain: automation
   input:
     thermostat_inputs:
@@ -96,6 +96,14 @@ blueprint:
               min: 0
               max: 59
               step: 1
+        reoccupied_duration:
+          name: Reoccupied Duration
+          description: How long in minutes the room must remain occupied to cancel the unoccupied state.
+          selector:
+            number:
+              min: 0
+              max: 5
+              step: 1
 
 mode: restart
 
@@ -109,6 +117,7 @@ variables:
   occupancy_sensor: !input room_occupancy_sensor
   unoccupied_offset: !input unoccupied_offset
   unoccupied_duration: !input unoccupied_duration
+  reoccupied_duration: !input reoccupied_duration
   current_temperature: "{{ states(external_temperature_var) | float }}"
   scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
   delta_above_15: !input delta_above_15
@@ -117,8 +126,15 @@ variables:
   delta_5_to_0: !input delta_5_to_0
   delta_below_0: !input delta_below_0
   is_unoccupied: >
-    {{ is_state(occupancy_sensor, 'off') and 
-       (as_timestamp(now()) - as_timestamp(states[occupancy_sensor].last_changed)) / 60 >= unoccupied_duration }}
+    {% if is_state(occupancy_sensor, 'off') and 
+       (as_timestamp(now()) - as_timestamp(states[occupancy_sensor].last_changed)) / 60 >= unoccupied_duration %}
+       true
+    {% elif is_state(occupancy_sensor, 'on') and 
+         (as_timestamp(now()) - as_timestamp(states[occupancy_sensor].last_changed)) / 60 < reoccupied_duration %}
+       true
+    {% else %}
+       false
+    {% endif %}
 
 action:
   - choose:
