--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -174,9 +174,9 @@ variables:
   time_period: >
     {% if now().hour >= 6 and now().minute >= 30 and now().hour < 12 %}
       morning
-    {% elif now().hour >= 12 and now().hour < 17 %}
+    {% elif now().hour >= 12 and (now().hour < 16 or (now().hour == 16 and now().minute < 30)) %}
       afternoon
-    {% elif now().hour >= 17 and now().hour < 22 %}
+    {% elif now().hour > 16 or (now().hour == 16 and now().minute >= 30) %}
       evening
     {% else %}
       none
