--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -163,7 +163,7 @@ mode: restart
 
 trigger:
   - platform: time_pattern
-    minutes: "/5"
+    minutes: "/1"
 
 variables:
   external_temperature_var: !input external_temperature
@@ -234,78 +234,68 @@ action:
           - condition: template
             value_template: "{{ current_temperature > 15 }}"
         sequence:
+          - condition: template
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {% if is_unoccupied %}
-                  {{ scheduled_setpoint + delta_above_15 + unoccupied_offset }}
-                {% else %}
-                  {{ scheduled_setpoint + delta_above_15 }}
-                {% endif %}
+                {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
       - conditions:
           - condition: template
             value_template: "{{ current_temperature > 10 and current_temperature <= 15 }}"
         sequence:
+          - condition: template
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {% if is_unoccupied %}
-                  {{ scheduled_setpoint + delta_above_10 + unoccupied_offset }}
-                {% else %}
-                  {{ scheduled_setpoint + delta_above_10 }}
-                {% endif %}
+                {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
       - conditions:
           - condition: template
             value_template: "{{ current_temperature > 5 and current_temperature <= 10 }}"
         sequence:
+          - condition: template
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {% if is_unoccupied %}
-                  {{ scheduled_setpoint + delta_10_to_5 + unoccupied_offset }}
-                {% else %}
-                  {{ scheduled_setpoint + delta_10_to_5 }}
-                {% endif %}
+                {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
       - conditions:
           - condition: template
             value_template: "{{ current_temperature > 0 and current_temperature <= 5 }}"
         sequence:
+          - condition: template
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {% if is_unoccupied %}
-                  {{ scheduled_setpoint + delta_5_to_0 + unoccupied_offset }}
-                {% else %}
-                  {{ scheduled_setpoint + delta_5_to_0 }}
-                {% endif %}
+                {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
       - conditions:
           - condition: template
             value_template: "{{ current_temperature <= 0 }}"
         sequence:
+          - condition: template
+            value_template: "{{ state_attr(thermostat, 'temperature') != (scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0)) }}"
           - service: climate.set_temperature
             target:
               entity_id: !input thermostat
             data:
               temperature: >
-                {% if is_unoccupied %}
-                  {{ scheduled_setpoint + delta_below_0 + unoccupied_offset }}
-                {% else %}
-                  {{ scheduled_setpoint + delta_below_0 }}
-                {% endif %}
+                {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
-  - delay: "00:15:30"
+  - delay: "00:10:00"
   - service: climate.set_temperature
     target:
       entity_id: !input thermostat
