--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -229,6 +229,9 @@ variables:
     {% endif %}
 
 action:
+  - condition: time
+    before: "22:00:00"
+    after: "06:30:00"
   - choose:
       - conditions:
           - condition: template
