--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -166,6 +166,7 @@ trigger:
     minutes: "/1"
 
 variables:
+  thermostat: !input thermostat
   external_temperature_var: !input external_temperature
   scheduled_setpoint_var: !input scheduled_setpoint
   delta_above_15: !input delta_above_15
