--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -158,6 +158,19 @@ blueprint:
               max: 0
               step: 0.5
           default: -0.5
+    misc_inputs:
+      name: '# Misc Inputs'
+      collapsed: false
+      input:
+        automation_delay:
+          name: Automation Delay
+          description: Delays the automation by a number of seconds so they dont all fire at the same time
+          selector:
+            number:
+              min: 0
+              max: 20
+              step: 1
+          default: 0
 
 mode: restart
 
@@ -228,6 +241,7 @@ variables:
     {% else %}
       false
     {% endif %}
+  automation_delay: !input automation_delay
 
 action:
   - condition: time
