--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -247,6 +247,8 @@ action:
   - condition: time
     before: "22:30:00"
     after: "06:30:00"
+  - delay:
+      seconds: "{{ automation_delay | int }}"
   - choose:
       - conditions:
           - condition: template
