--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -263,7 +263,7 @@ action:
               temperature: >
                 {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
-          - service: logger.log
+          - service: system_log.write
             data:
               message: "Calculated setpoint for thermostat {{ thermostat }}: {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }} (External Temp: {{ current_temperature }}°C) (scheduled setpoint: {{ scheduled_setpoint }}°C)"
             level: info
@@ -280,7 +280,7 @@ action:
               temperature: >
                 {{ scheduled_setpoint + delta_above_10 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
-          - service: logger.log
+          - service: system_log.write
             data:
               message: "Calculated setpoint for thermostat {{ thermostat }}: {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }} (External Temp: {{ current_temperature }}°C) (scheduled setpoint: {{ scheduled_setpoint }}°C)"
             level: info              
@@ -297,7 +297,7 @@ action:
               temperature: >
                 {{ scheduled_setpoint + delta_10_to_5 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
-          - service: logger.log
+          - service: system_log.write
             data:
               message: "Calculated setpoint for thermostat {{ thermostat }}: {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }} (External Temp: {{ current_temperature }}°C) (scheduled setpoint: {{ scheduled_setpoint }}°C)"
             level: info              
@@ -314,7 +314,7 @@ action:
               temperature: >
                 {{ scheduled_setpoint + delta_5_to_0 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
-          - service: logger.log
+          - service: system_log.write
             data:
               message: "Calculated setpoint for thermostat {{ thermostat }}: {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }} (External Temp: {{ current_temperature }}°C) (scheduled setpoint: {{ scheduled_setpoint }}°C)"
             level: info              
@@ -331,7 +331,7 @@ action:
               temperature: >
                 {{ scheduled_setpoint + delta_below_0 + (unoccupied_offset if is_unoccupied else 0) }}
               hvac_mode: "heat"
-          - service: logger.log
+          - service: system_log.write
             data:
               message: "Calculated setpoint for thermostat {{ thermostat }}: {{ scheduled_setpoint + delta_above_15 + (unoccupied_offset if is_unoccupied else 0) }} (External Temp: {{ current_temperature }}°C) (scheduled setpoint: {{ scheduled_setpoint }}°C)"
             level: info              
